modify:change placeholder writing style and set first letter to uppercase (en)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,12 +1,12 @@
 en:
   lang: "English"
   search_mails: "Search mails"
-  search: "search"
+  search: "Search"
   compose: "+Compose"
-  inbox: "inbox"
-  star: "starred"
-  sent: "sent"
-  label: "label"
-  trash: "trash"
+  inbox: "Inbox"
+  star: "Starred"
+  sent: "Sent"
+  label: "Label"
+  trash: "Trash"
   5xruby: "5XRUBY"
-  payment: "payment"
+  payment: "Payment"
