modify:更改付款為抖內

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,7 +9,7 @@ en:
   label: "Label"
   trash: "Trash"
   5xruby: "5XRUBY"
-  payment: "Payment"
+  payment: "Donate to Yimail"
   reset_pw: "Reset password"
   log_out: "Log out"
   create_label: "Create label"
