--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -9,7 +9,7 @@ zh-TW:
   label: "標籤"
   trash: "垃圾桶"
   5xruby: "五倍紅寶石"
-  payment: "抖內支持Yimail"
+  payment: "抖內支持"
   reset_pw: "重設密碼"
   log_out: "登出"
   create_label: "建立標籤"
